Fix items wrapping in dropdown list

--- a/src/components/dropdown-list/dropdown-list.scss
+++ b/src/components/dropdown-list/dropdown-list.scss
@@ -46,6 +46,7 @@ gtx-dropdown-content {
         color: $gtx-color-primary;
         font-size: 16px;
         padding: (($dropdown-item-height - 22) / 2) 16px;
+        white-space: nowrap;
 
         &:hover {
             outline-width: 0;
